$Id: RELEASE-NOTES.txt,v 1.20 2004/03/29 23:04:41 ggregory Exp $

			Commons Codec Package
			    Version 1.3-dev
			    Release Notes


INTRODUCTION:

This document contains the release notes for this version of the Commons
Codec package, and highlights changes since the previous version.  

This version is relesed under the Apache License 2.0, please see 
./LICENSE.txt. Previous versions were released under the Apache 
License 1.1.

NEW FEATURES:

* BinaryCodec: Encodes and decodes binary to and from Strings of 0s and 1s.

* QuotedPrintableCodec: Codec for RFC 1521 MIME (Multipurpose Internet 
 Mail Extensions) Part One. Rules #3, #4, and #5 of the quoted-printable spec 
 are not implemented yet

* Soundex: Implemented the DIFFERENCE algorithm.

* RefinedSoundex: Implemented the DIFFERENCE algorithm.

BUG FIXES:

* Fixed Bug 25995
 Default URL encoding logic broken.
 http://nagoya.apache.org/bugzilla/show_bug.cgi?id=25995

* Fixed Bug 27781
 Base64 chunked encoding not compliant with RFC 2045 section 2.1 CRLF
 http://nagoya.apache.org/bugzilla/show_bug.cgi?id=27781
	  	
* Added missing tags in Javadoc comments.  

* General Javadoc improvements.

* The Board recommendation to remove Javadoc author tags has been 
implemented. All author tags are now "Apache Software Foundation".

