@@ -1,4 +1,4 @@
-$Id: RELEASE-NOTES.txt,v 1.20 2004/03/29 23:04:41 ggregory Exp $
+$Id: RELEASE-NOTES.txt,v 1.21 2004/04/13 22:46:37 ggregory Exp $
 
 			Commons Codec Package
 			    Version 1.3-dev
@@ -21,6 +21,13 @@ NEW FEATURES:
 * QuotedPrintableCodec: Codec for RFC 1521 MIME (Multipurpose Internet 
  Mail Extensions) Part One. Rules #3, #4, and #5 of the quoted-printable spec 
  are not implemented yet
+ 
+* BCodec: Identical to the Base64 encoding defined by RFC 1521 and allows a 
+ character set to be specified.
+ 
+* QCodec: Similar to the Quoted-Printable content-transfer-encoding defined 
+  in RFC 1521 and designed to allow text containing mostly ASCII characters to
+  be decipherable on an ASCII terminal without decoding.
 
 * Soundex: Implemented the DIFFERENCE algorithm.
 
